--- a/_posts/2018-04-19-快速搭建个人博客.md
+++ b/_posts/2018-04-19-快速搭建个人博客.md
@@ -4,7 +4,7 @@ title:      快速搭建个人博客
 subtitle:   手把手教你在半小时内搭建自己的个人博客(如果不踩坑的话🙈🙊🙉)
 date:       2017-02-06
 author:     BY
-header-img: img/post-bg-re-vs-ng2.jpg
+header-img: img/post-bg-universe.jpg
 catalog: true
 tags:
     - Blog
@@ -108,8 +108,8 @@ tags:
 很复杂看不懂是不是，不要紧，你只要记住其中几个OK了
 
 - `_config.yml` 全局配置文件
-- `_posts`	放置博客文章的文件夹
-- `img`	存放图片的文件夹
+	 `_posts`	放置博客文章的文件夹
+	 `img`	存放图片的文件夹
 
 其他的想继续深究可以[看这里](http://jekyll.com.cn/docs/structure/)
 
